--- a/elements/click-input/click-input-container.html
+++ b/elements/click-input/click-input-container.html
@@ -31,7 +31,7 @@
       .focused-line {
         @apply(--layout-fit);
 
-        background: var(--input-container-focus-color, --light-accent-color);
+        background: var(--input-container-focus-color, --accent-color);
         height: 2px;
           -webkit-transform: scale3d(0, 1, 1);
         transform: scale3d(0, 1, 1);
