--- a/elements/click-menu/click-menu-shared-styles.html
+++ b/elements/click-menu/click-menu-shared-styles.html
@@ -8,7 +8,7 @@
       /* need a wrapper element to make this higher specificity than the :host rule in click-item */
       .selectable-content > ::content > .iron-selected {
         font-weight: normal;
-        color: var(--light-accent-color);
+        color: var(--accent-color);
         @apply(--menu-selected-item);
       }
 
