--- a/elements/click-button/click-button.html
+++ b/elements/click-button/click-button.html
@@ -26,15 +26,15 @@
       }
 
       :host(:not([link])){
-        background: -webkit-linear-gradient(right, var(--dark-accent-color) , var(--light-accent-color));
-        background: linear-gradient(to right, var(--dark-accent-color) , var(--light-accent-color));
+        background: -webkit-linear-gradient(right, var(--dark-accent-color) , var(--accent-color));
+        background: linear-gradient(to right, var(--dark-accent-color) , var(--accent-color));
         text-align: center;
         min-width: 5.14em;
-        padding: 0.7em 2.5em;
+        padding: 0.7em 1.5em;
       }
 
       :host([disabled]) {
-        background-color: var(--light-accent-color);
+        background-color: var(--accent-color);
         color: var(--primary-text-color);
         opacity: .5;
         cursor: auto;
@@ -60,7 +60,7 @@
           backface-visibility:hidden;
         position:relative;
         transition:0.5s color ease;
-        color: var(--light-accent-color);
+        color: var(--accent-color);
       }
 
       :host([link]:after){
