--- a/elements/click-item/click-item.html
+++ b/elements/click-item/click-item.html
@@ -17,7 +17,7 @@
         min-height: var(--item-min-height, 48px);
         padding: 0px 16px;
         position: relative;
-
+        background: transparent;
         @apply(--item);
       }
 
