--- a/elements/click-tabs/click-tab.html
+++ b/elements/click-tabs/click-tab.html
@@ -32,22 +32,30 @@
         @apply(--layout-center-center);
         @apply(--layout-flex-auto);
 
-        height: 100%;
+        height: 75%;
           -webkit-transform: translateZ(0);
         transform: translateZ(0);
-        transition: opacity 0.1s cubic-bezier(0.4, 0.0, 1, 1);
-
+        transition: opacity 0.1s cubic-bezier(0.4, 0.0, 1, 1), background .1s;
+        border-radius: 3px;
+        background-color: var(--primary-background-color);
+        padding: 0 10px;
         @apply(--tab-content);
       }
 
       :host(:not(.iron-selected)) > .tab-content {
-        opacity: 0.8;
-
+        opacity: 0.4;
+        
         @apply(--tab-content-unselected);
       }
 
+      :host.iron-selected > .tab-content{
+        background: -webkit-linear-gradient(right, var(--dark-accent-color) , var(--accent-color));
+        background: linear-gradient(to right, var(--dark-accent-color) , var(--accent-color));
+      }
+
       :host(:focus) .tab-content {
-        font-weight: 700;
+        background: -webkit-linear-gradient(right, var(--dark-accent-color) , var(--accent-color));
+        background: linear-gradient(to right, var(--dark-accent-color) , var(--accent-color));
         opacity: 1;
       }
 
