--- a/elements/click-card/click-card.html
+++ b/elements/click-card/click-card.html
@@ -15,7 +15,8 @@
         box-sizing: border-box;
         display: inline-block;
         position: relative;
-
+        margin-right: 15px;
+        margin-left: 15px;
         @apply(--card);
       }
 
