--- a/elements/click-input/click-input-char-counter.html
+++ b/elements/click-input/click-input-char-counter.html
@@ -12,6 +12,7 @@
         font-weight: 400;
         letter-spacing: 0.011em;
         line-height: 20px;
+        margin-top: 10px;
       }
 
       :host-context([dir="rtl"]) {
