--- a/elements/click-input/click-input.html
+++ b/elements/click-input/click-input.html
@@ -13,6 +13,18 @@
         display: block;
       }
 
+      :host.has-value label{
+        display: none;
+      }
+      
+      :host([focused]) label{
+        display: none;
+      }
+
+      :host([focused]) .input-container{
+        border: 1px solid var(--accent-color);
+      }
+
       input::-webkit-input-placeholder {
         color: var(--input-container-color, --secondary-text-color);
       }
@@ -31,7 +43,7 @@
     </style>
 
     <!-- write your template here -->
-    <click-input-container auto-validate$="[[autoValidate]]" disabled$="[[disabled]]" invalid="[[invalid]]" class="input-container">
+    <click-input-container auto-validate$="[[autoValidate]]" disabled$="[[disabled]]" invalid="[[invalid]]" class="input-container" on-change="changeHandler">
       <label hidden$="[[!label]]">[[label]]</label>
 
       <content select="[prefix]"></content>
@@ -90,7 +102,17 @@
 
       behaviors: [
         Polymer.KoaInputBehavior
-      ]
+      ],
+
+      changeHandler: function(event, detail, sender) { 
+        if(this.$.input.value != ''){
+          this.classList.add('has-value');
+        }
+        else{
+          this.classList.remove('has-value');
+        }
+      }
+
     });
   </script>
 </dom-module>
