Default styles theme

--- a/styles/default-theme.html
+++ b/styles/default-theme.html
@@ -31,6 +31,16 @@
   body {
     background-color: var(--primary-color);
   }
+  
+  /*.polymermenu #content {
+    padding: 0 30px;
+    max-width: 87%;
+  }*/
+  
+  .polymermenu .html{
+    padding: 0 30px;
+    max-width: 87%;
+  }
 
   .polymermenu .panel #header:not([style-scope]):not(.style-scope){
     background-color: var(--primary-background-color);
