Group list: color gradient on buttons

--- a/styles/default-theme.html
+++ b/styles/default-theme.html
@@ -67,10 +67,11 @@
 
   .grouplist a.border{
     border-radius: 3px;
-    border-color: var(--accent-color);
-    background: var(--accent-color);
+    border: none!important;
+    background: -webkit-linear-gradient(right, var(--dark-accent-color) , var(--accent-color));
+    background: linear-gradient(to right, var(--dark-accent-color) , var(--accent-color));
     color: var(--primary-text-color);
-    margin: 20px 20px 0;
+    margin: 20px 20px 0!important;
   }
 
 </style>
